@@ -100,6 +100,7 @@ EU3Country::EU3Country(EU3World* world, string newTag, string newHistoryFile, da
 
 	estimatedIncome		= 0.0f;
 	estimatedTax			= 0.0f;
+	estimatedTolls			= 0.0f;
 
 	vector<Object*> daimyoObj = obj->getValue("daimyo");
 	if (daimyoObj.size() > 0)
@@ -311,7 +312,7 @@ void EU3Country::output(FILE* output)
 	fprintf(output, "\t{\n");
 	fprintf(output, "\t\tincome=\n");
 	fprintf(output, "\t\t{\n");
-	fprintf(output, "\t\t\t%f 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n", estimatedTax);
+	fprintf(output, "\t\t\t%f 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 %f 0.000 0.000 0.000 0.000\n", estimatedTax, estimatedTolls);
 	fprintf(output, "\t\t}\n");
 	fprintf(output, "\t\texpense=\n");
 	fprintf(output, "\t\t{\n");
@@ -327,7 +328,7 @@ void EU3Country::output(FILE* output)
 	fprintf(output, "\t\t}\n");
 	fprintf(output, "\t\tlastmonthincometable=\n");
 	fprintf(output, "\t\t{\n");
-	fprintf(output, "\t\t\t%f 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000\n", estimatedTax);
+	fprintf(output, "\t\t\t%f 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 0.000 %f 0.000 0.000 0.000 0.000\n", estimatedTax, estimatedTolls);
 	fprintf(output, "\t\t}\n");
 	fprintf(output, "\t\tlastmonthexpensetable=\n");
 	fprintf(output, "\t\t{\n");
@@ -652,16 +653,18 @@ void EU3Country::determineGovernment(const religionGroupMapping& religionGroupMa
 	}
 }
 
-#pragma optimize("", off)
+
 void EU3Country::determineEconomy(const cultureGroupMapping& cultureGroups)
 {
 	estimatedIncome = 0.0f;
 	for (vector<EU3Province*>::iterator provItr = provinces.begin(); provItr < provinces.end(); provItr++)
 	{
-		estimatedTax += (*provItr)->determineTax(this, cultureGroups);
+		estimatedTax	+= (*provItr)->determineTax(this, cultureGroups);
+		estimatedTolls	+= (*provItr)->determineTolls(this);
 	}
 
 	estimatedIncome += estimatedTax;
+	estimatedIncome += estimatedTolls;
 
 	if (monarch != NULL)
 	{
@@ -669,4 +672,18 @@ void EU3Country::determineEconomy(const cultureGroupMapping& cultureGroups)
 	}
 	stabilityInvestment += estimatedIncome / 6;
 }
-#pragma optimize("", on)
+
+
+
+double EU3Country::getTradeEffeciency()
+{
+	double TE = 0.1f;
+	//TODO: tech bonus
+	//TODO: slider effects
+	if (government == "administrative_republic")
+	{
+		TE += 0.1;
+	}
+
+	return TE;
+}
